--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="./styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-     <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png"> 
-    </head>
+    <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png"> 
+</head>
 
 <body>
    <header>
@@ -18,19 +18,15 @@
               <img src="images/videochum-high-resolution-logo-transparent.png" alt="the logo " class="video_chum_logo"/>
         </div>
         <div class="navbar_nav_items">
-        <div class="nav_items">
-            <div class="dropdown_contents">
-              <select name="language" id="langselect" class="language_dropdown"> 
-                <option value="English" selected >English</option>
-                <option value="Hindi"  >Hindi</option>
-                <option value="French"  >French</option>
-              </select>  
-            </div>
           <div class="nav_items">
-             <button class="login_button">Log in</button>
-             <button class="signup_button">Sign up</button>
+            <select name="language" id="langselect" class="language_dropdown"> 
+                <option value="English" selected>English</option>
+                <option value="Hindi">Hindi</option>
+                <option value="French">French</option>
+            </select>  
+            <button class="login_button">Log in</button>
+            <button class="signup_button">Sign up</button>
           </div>
-        </div>
         </div>
      </nav> 
     </header> 
@@ -38,73 +34,88 @@
     <main>
       <section class="welcome">
         <div class="welcome_bg_img_contain">
-          <img src="images/welcomeimg.jpg" alt="welcometothesite">
+          <img src="images/welcomeimg.jpg" alt="Welcome to the site">
         </div>
         <div class="welcome_bg_img_overlay"></div>
         <div class="user_card">
           <h1 class="instruciton">Start Your Video Call Adventure</h1>
           <p class="user_directions">Enter the name of the room below and<br> click create room to proceed</p>
-           <nobr> <input type="roomname" placeholder="Enter room name" class="user_room"> <button  class="create_room">Create Room</button></nobr>
+           <nobr> 
+             <input type="text" placeholder="Enter room name" class="user_room"> 
+             <button class="create_room">Create Room</button>
+           </nobr>
         </div>
       </section>
     </main>
 
-    <footer class="footer" >
-      <p>Questions? Call: xx xx xx xx xx</p>
-      <div class="footer_cards1">
-        <h1>About</h1>
-        <ul>
-          <li>About us</li>
-          <li>Our vision </li>
-          <li>Careers</li>
-          <li>Press</li>   
-        </ul>
+    <footer class="footer">
+      <div class="footer_row">
+        <div class="footer_card">
+          <div class="footer_column">
+            <h1>About</h1>
+            <ul>
+              <li>About us</li>
+              <li>Our vision</li>
+              <li>Careers</li>
+              <li>Press</li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer_card">
+          <div class="footer_column">
+            <h1>Product</h1>
+            <ul>
+              <li>Embedded</li>
+              <li>Meetings</li>
+              <li>What's New</li>
+              <li>Status</li>
+              <li>Reference Docs</li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer_card">
+          <div class="footer_column">
+            <h1>Pricing</h1>
+            <ul>
+              <li>For Embedded</li>
+              <li>For Meetings</li>
+            </ul>
+          </div>
+        </div>
       </div>
-      <div class="footer_cards2">
-        <h1>Product</h1>
-        <ul>
-          <li>Embedded</li>
-          <li>Meetings </li>
-          <li>What's New</li>
-          <li>Status</li>   
-          <li>Reference Docs</li>
-
-        </ul>
+      <div class="footer_row">
+        <div class="footer_card">
+          <div class="footer_column">
+            <h1>Social</h1>
+            <ul>
+              <li>Blog</li>
+              <li>Twitter</li>
+              <li>LinkedIn</li>
+              <li>Instagram</li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer_card">
+          <div class="footer_column">
+            <h1>Support</h1>
+            <ul>
+              <li>Support Center</li>
+              <li>Privacy Policy</li>
+              <li>Terms of Service</li>
+              <li>Cookie Policy</li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer_card">
+          <div class="footer_column">
+            <h1>Get in touch</h1>
+            <ul>
+              <li>Contact Support</li>
+            </ul>
+          </div>
+        </div>
       </div>
-      <div class="footer_cards3">
-        <h1>Pricing</h1>
-        <ul>
-          <li>For Embedded</li>
-          <li>For Meetings</li>
-            
-        </ul>
-      </div>
-      <div class="footer_cards4">
-        <h1>Social</h1>
-        <ul>
-          <li>Blog</li>
-          <li>Twitter </li>
-          <li>LinkedIn</li>
-          <li>Instagram</li>   
-        </ul>
-      </div>
-      <div class="footer_cards5">
-        <h1>Support</h1>
-        <ul>
-          <li>Support Center</li>
-          <li>Privacy Policy</li>
-          <li>Terms of Service</li>
-          <li>Coockie Policy</li>   
-        </ul>
-      </div>
-      <div class="footer_cards6">
-        <h1>Get in touch</h1>
-        <ul>
-          <li>Contact Support</li>
-       
-        </ul>
-      </div>
+      <p class="footer_contact">Questions? Call: xx xx xx xx xx</p>
     </footer>
 </body>
-
 </html>
